
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "BoosterPackStuffProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message RareBoosterPurchaseProto {
	optional MinimumUserProto user = 1;
	optional BoosterPackProto booster = 2;
	optional uint64 timeOfPurchase = 3;
	optional int32 monsterId = 4;
}

//------------------------------------------------------------------------------------------

message BoosterPackProto {
	optional int32 boosterPackId = 1;
	optional string boosterPackName = 2;
	optional int32 gemPrice = 3;
	repeated BoosterItemProto boosterItems = 4;
}

//------------------------------------------------------------------------------------------

message BoosterItemProto {
	optional int32 boosterItemId = 1;
	optional int32 boosterPackId = 2;
	optional int32 monsterId = 3;
	optional int32 numPieces = 4;
	optional bool isComplete = 5; 
	optional bool isSpecial = 6;
	optional int32 gemReward = 7;
	optional int32 cashReward = 8;
	optional float chanceToAppear = 9;
}

//------------------------------------------------------------------------------------------


